// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`rdme openapi upload > flag error handling > should throw if an error if both \`--branch\` and \`--useSpecVersion\` flags are passed 1`] = `
{
  "error": [Error: The following error occurred:
  --branch=1.0.0 cannot also be provided when using --useSpecVersion
See more help with --help],
  "stderr": "",
  "stdout": "",
}
`;

exports[`rdme openapi upload > flag error handling > should throw if an error if both \`--slug\` and \`--legacy-id\` flags are passed 1`] = `
{
  "error": [Error: The following error occurred:
  --slug=custom-slug cannot also be provided when using --legacy-id
See more help with --help],
  "stderr": "",
  "stdout": "",
}
`;

exports[`rdme openapi upload > given that the "--legacy-id" flag is passed > should error if no matching API definition found (and there are no existing definitions) 1`] = `
{
  "error": [Error: No API definition found with legacy ID 1234567890. No existing definitions were found. Did you mean to use the \`--slug\` flag instead?],
  "stderr": "- Validating the API definition located at __tests__/__fixtures__/petstore-simple-weird-version.json...
",
  "stdout": "",
}
`;

exports[`rdme openapi upload > given that the "--legacy-id" flag is passed > should error if no matching API definition found (and there are several existing definitions) 1`] = `
{
  "error": [Error: No API definition found with legacy ID 1234567890. 3 file(s) were found — if you meant to update one of those, pass in one of these slugs via the \`--slug\` flag: \`file1.json\`, \`file2.json\`, \`file3.json\`.],
  "stderr": "- Validating the API definition located at __tests__/__fixtures__/petstore-simple-weird-version.json...
",
  "stdout": "",
}
`;

exports[`rdme openapi upload > given that the "--legacy-id" flag is passed > should error if no matching API definition found (and there is a single existing definition) 1`] = `
{
  "error": [Error: No API definition found with legacy ID 1234567890. 1 file was found — did you mean to update that? If so, try replacing \`--legacy-id 1234567890\` with \`--slug file1.json\`.],
  "stderr": "- Validating the API definition located at __tests__/__fixtures__/petstore-simple-weird-version.json...
",
  "stdout": "",
}
`;

exports[`rdme openapi upload > given that the "--legacy-id" flag is passed > should update an existing spec with matching legacy_id 1`] = `
{
  "result": {
    "status": "done",
    "uri": "/branches/1.0.0/apis/legacy-spec.json",
  },
  "stderr": "- Validating the API definition located at __tests__/__fixtures__/petstore-simple-weird-version.json...
 ›   Warning: The \`--legacy-id\` flag will be removed in a future version. We 
 ›   recommend passing \`--slug legacy-spec.json\` for maximum compatibility and 
 ›   readability.
- Updating your API definition to ReadMe...
✔ Updating your API definition to ReadMe... done!
",
  "stdout": "🚀 Your API definition (legacy-spec.json) was successfully updated in ReadMe!
",
}
`;

exports[`rdme openapi upload > given that the API definition is a URL > and the \`--slug\` flag is passed > should create a new API definition in ReadMe with a custom slug with YAML file extension where URL has no path and the file is YAML 1`] = `
{
  "result": {
    "status": "done",
    "uri": "/branches/1.0.0/apis/custom-slug.yml",
  },
  "stderr": "- Validating the API definition located at https://example.com...
 ›   Warning: Support for Postman collections is currently experimental.
- Creating your API definition to ReadMe...
✔ Creating your API definition to ReadMe... done!
",
  "stdout": "🚀 Your API definition (custom-slug.yml) was successfully created in ReadMe!
",
}
`;

exports[`rdme openapi upload > given that the API definition is a URL > and the \`--slug\` flag is passed > should create a new API definition in ReadMe with the specified slug 1`] = `
{
  "result": {
    "status": "done",
    "uri": "/branches/1.0.0/apis/custom-slug.json",
  },
  "stderr": "- Validating the API definition located at https://example.com/openapi.json...
- Creating your API definition to ReadMe...
✔ Creating your API definition to ReadMe... done!
",
  "stdout": "🚀 Your API definition (custom-slug.json) was successfully created in ReadMe!
",
}
`;

exports[`rdme openapi upload > given that the API definition is a URL > and the \`--slug\` flag is passed > should create a new API definition in ReadMe with the specified slug where URL has no path and the file is JSON 1`] = `
{
  "result": {
    "status": "done",
    "uri": "/branches/1.0.0/apis/custom-slug.json",
  },
  "stderr": "- Validating the API definition located at https://example.com...
- Creating your API definition to ReadMe...
✔ Creating your API definition to ReadMe... done!
",
  "stdout": "🚀 Your API definition (custom-slug.json) was successfully created in ReadMe!
",
}
`;

exports[`rdme openapi upload > given that the API definition is a URL > and the \`--slug\` flag is passed > should create a new API definition in ReadMe with the specified slug where URL has no path and the file is YAML 1`] = `
{
  "result": {
    "status": "done",
    "uri": "/branches/1.0.0/apis/custom-slug.json",
  },
  "stderr": "- Validating the API definition located at https://example.com...
 ›   Warning: Support for Postman collections is currently experimental.
- Creating your API definition to ReadMe...
✔ Creating your API definition to ReadMe... done!
",
  "stdout": "🚀 Your API definition (custom-slug.json) was successfully created in ReadMe!
",
}
`;

exports[`rdme openapi upload > given that the API definition is a URL > and the \`--slug\` flag is passed > should create a new API definition in ReadMe with the specified slug where URL is a query param 1`] = `
{
  "result": {
    "status": "done",
    "uri": "/branches/1.0.0/apis/custom-slug.json",
  },
  "stderr": "- Validating the API definition located at https://example.com/openapi.json?somequery=true...
- Creating your API definition to ReadMe...
✔ Creating your API definition to ReadMe... done!
",
  "stdout": "🚀 Your API definition (custom-slug.json) was successfully created in ReadMe!
",
}
`;

exports[`rdme openapi upload > given that the API definition is a URL > should create a new API definition in ReadMe 1`] = `
{
  "result": {
    "status": "done",
    "uri": "/branches/1.0.0/apis/openapi.json",
  },
  "stderr": "- Validating the API definition located at https://example.com/openapi.json...
 ›   Warning: The slug of your API Definition will be set to openapi.json in 
 ›   ReadMe. This slug is not visible to your end users. To set this slug to 
 ›   something else, use the \`--slug\` flag.
- Creating your API definition to ReadMe...
✔ Creating your API definition to ReadMe... done!
",
  "stdout": "🚀 Your API definition (openapi.json) was successfully created in ReadMe!
",
}
`;

exports[`rdme openapi upload > given that the API definition is a URL > should create a new API definition in ReadMe if there is no file extension and the file is JSON 1`] = `
{
  "result": {
    "status": "done",
    "uri": "/branches/1.0.0/apis/openapi.json",
  },
  "stderr": "- Validating the API definition located at https://example.com/no-extension...
 ›   Warning: The slug of your API Definition will be set to no-extension.json 
 ›   in ReadMe. This slug is not visible to your end users. To set this slug to
 ›    something else, use the \`--slug\` flag.
- Creating your API definition to ReadMe...
✔ Creating your API definition to ReadMe... done!
",
  "stdout": "🚀 Your API definition (no-extension.json) was successfully created in ReadMe!
",
}
`;

exports[`rdme openapi upload > given that the API definition is a URL > should create a new API definition in ReadMe if there is no path and the file is JSON 1`] = `
{
  "result": {
    "status": "done",
    "uri": "/branches/1.0.0/apis/openapi.json",
  },
  "stderr": "- Validating the API definition located at https://example.com...
 ›   Warning: No filename could be inferred from the provided URL, so the slug 
 ›   will default to openapi.json. To set a custom slug, use the \`--slug\` flag.
- Creating your API definition to ReadMe...
✔ Creating your API definition to ReadMe... done!
",
  "stdout": "🚀 Your API definition (openapi.json) was successfully created in ReadMe!
",
}
`;

exports[`rdme openapi upload > given that the API definition is a URL > should create a new API definition in ReadMe if there is no path and the file is YAML 1`] = `
{
  "result": {
    "status": "done",
    "uri": "/branches/1.0.0/apis/openapi.json",
  },
  "stderr": "- Validating the API definition located at https://example.com...
 ›   Warning: Support for Postman collections is currently experimental.
 ›   Warning: No filename could be inferred from the provided URL, so the slug 
 ›   will default to openapi.json. To set a custom slug, use the \`--slug\` flag.
- Creating your API definition to ReadMe...
✔ Creating your API definition to ReadMe... done!
",
  "stdout": "🚀 Your API definition (openapi.json) was successfully created in ReadMe!
",
}
`;

exports[`rdme openapi upload > given that the API definition is a URL > should handle issues fetching from the URL 1`] = `
{
  "error": [Error: Unknown file detected.],
  "stderr": "- Validating the API definition located at https://example.com/openapi.json...
✖ Validating the API definition located at https://example.com/openapi.json...
",
  "stdout": "",
}
`;

exports[`rdme openapi upload > given that the API definition is a URL > should update an existing API definition in ReadMe 1`] = `
{
  "result": {
    "status": "done",
    "uri": "/branches/1.0.0/apis/openapi.json",
  },
  "stderr": "- Validating the API definition located at https://example.com/openapi.json...
 ›   Warning: The slug of your API Definition will be set to openapi.json in 
 ›   ReadMe. This slug is not visible to your end users. To set this slug to 
 ›   something else, use the \`--slug\` flag.
- Updating your API definition to ReadMe...
✔ Updating your API definition to ReadMe... done!
",
  "stdout": "🚀 Your API definition (openapi.json) was successfully updated in ReadMe!
",
}
`;

exports[`rdme openapi upload > given that the API definition is a local file > and the \`--slug\` flag is passed > should emit a warning if an object ID is passed and no legacy match is found 1`] = `
{
  "result": {
    "status": "done",
    "uri": "/branches/1.0.0/apis/687855c3600c6e14c79a94cb.json",
  },
  "stderr": "- Validating the API definition located at __tests__/__fixtures__/petstore-simple-weird-version.json...
 ›   Warning: The slug you provided looks like a legacy API definition ID, and 
 ›   these IDs are now deprecated in ReadMe. More info here: 
 ›   https://github.com/readmeio/rdme/blob/v10/documentation/migration-guide.md
 ›   #v10-openapi-upload-command-updates
- Creating your API definition to ReadMe...
✔ Creating your API definition to ReadMe... done!
",
  "stdout": "🚀 Your API definition (687855c3600c6e14c79a94cb.json) was successfully created in ReadMe!
",
}
`;

exports[`rdme openapi upload > given that the API definition is a local file > and the \`--slug\` flag is passed > should exit if an object ID is passed and a legacy match is found but the user declines the prompt 1`] = `
{
  "error": [Error: Aborting, no changes were made.],
  "stderr": "- Validating the API definition located at __tests__/__fixtures__/petstore-simple-weird-version.json...
",
  "stdout": "",
}
`;

exports[`rdme openapi upload > given that the API definition is a local file > and the \`--slug\` flag is passed > should handle a slug with a valid but mismatching file extension (.json slug, YAML file) 1`] = `
{
  "result": {
    "status": "done",
    "uri": "/branches/1.0.0/apis/custom-slug.json",
  },
  "stderr": "- Validating the API definition located at __tests__/__fixtures__/postman/petstore.collection.yaml...
 ›   Warning: Support for Postman collections is currently experimental.
 ›   Warning: The file extension in your provided slug (.json) does not match 
 ›   the file extension of the file you're uploading (.yaml). Your API 
 ›   definition will be converted to JSON prior to upload.
- Updating your API definition to ReadMe...
✔ Updating your API definition to ReadMe... done!
",
  "stdout": "🚀 Your API definition (custom-slug.json) was successfully updated in ReadMe!
",
}
`;

exports[`rdme openapi upload > given that the API definition is a local file > and the \`--slug\` flag is passed > should handle a slug with a valid but mismatching file extension (.yml slug, JSON file) 1`] = `
{
  "result": {
    "status": "done",
    "uri": "/branches/1.0.0/apis/custom-slug.yml",
  },
  "stderr": "- Validating the API definition located at __tests__/__fixtures__/petstore-simple-weird-version.json...
 ›   Warning: The file extension in your provided slug (.yml) does not match 
 ›   the file extension of the file you're uploading (.json). Your API 
 ›   definition will be converted to YAML prior to upload.
- Updating your API definition to ReadMe...
✔ Updating your API definition to ReadMe... done!
",
  "stdout": "🚀 Your API definition (custom-slug.yml) was successfully updated in ReadMe!
",
}
`;

exports[`rdme openapi upload > given that the API definition is a local file > and the \`--slug\` flag is passed > should handle a slug with an invalid file extension 1`] = `
{
  "error": [Error: Please provide a valid file extension that matches the extension on the file you provided. Must be \`.json\`, \`.yaml\`, or \`.yml\`.],
  "stderr": "- Validating the API definition located at __tests__/__fixtures__/petstore-simple-weird-version.json...
",
  "stdout": "",
}
`;

exports[`rdme openapi upload > given that the API definition is a local file > and the \`--slug\` flag is passed > should prompt the user before updating if an object ID is passed and a legacy match is found 1`] = `
{
  "result": {
    "status": "done",
    "uri": "/branches/1.0.0/apis/legacy-spec.json",
  },
  "stderr": "- Validating the API definition located at __tests__/__fixtures__/petstore-simple-weird-version.json...
 ›   Warning: The slug you provided matches a legacy API definition ID and 
 ›   these IDs are now deprecated in ReadMe. To ensure maximum compatibility 
 ›   going forward, we recommend updating your \`--slug\` flag to  
 ›   \`legacy-spec.json\`.
- Updating your API definition to ReadMe...
✔ Updating your API definition to ReadMe... done!
",
  "stdout": "🚀 Your API definition (legacy-spec.json) was successfully updated in ReadMe!
",
}
`;

exports[`rdme openapi upload > given that the API definition is a local file > and the \`--slug\` flag is passed > should use the provided slug (includes file extension) as the filename 1`] = `
{
  "result": {
    "status": "done",
    "uri": "/branches/1.0.0/apis/custom-slug.json",
  },
  "stderr": "- Validating the API definition located at __tests__/__fixtures__/petstore-simple-weird-version.json...
- Creating your API definition to ReadMe...
✔ Creating your API definition to ReadMe... done!
",
  "stdout": "🚀 Your API definition (custom-slug.json) was successfully created in ReadMe!
",
}
`;

exports[`rdme openapi upload > given that the API definition is a local file > and the \`--slug\` flag is passed > should use the provided slug (no file extension) as the filename 1`] = `
{
  "result": {
    "status": "done",
    "uri": "/branches/1.0.0/apis/custom-slug.json",
  },
  "stderr": "- Validating the API definition located at __tests__/__fixtures__/petstore-simple-weird-version.json...
- Creating your API definition to ReadMe...
✔ Creating your API definition to ReadMe... done!
",
  "stdout": "🚀 Your API definition (custom-slug.json) was successfully created in ReadMe!
",
}
`;

exports[`rdme openapi upload > given that the API definition is a local file > and the command is being run in a CI environment > should error out if an object ID is passed and there is a legacy match found 1`] = `
{
  "error": [Error: The slug you provided matches a legacy API definition ID, which have been deprecated in ReadMe. To fix this, update your \`--slug\` flag to  \`legacy-spec.json\`.],
  "stderr": "- Validating the API definition located at __tests__/__fixtures__/petstore-simple-weird-version.json...
",
  "stdout": "",
}
`;

exports[`rdme openapi upload > given that the API definition is a local file > and the command is being run in a CI environment > should overwrite an existing API definition without asking for confirmation 1`] = `
{
  "result": {
    "status": "done",
    "uri": "/branches/1.0.0/apis/__tests____fixtures__petstore-simple-weird-version.json",
  },
  "stderr": "- Validating the API definition located at __tests__/__fixtures__/petstore-simple-weird-version.json...
- Updating your API definition to ReadMe...
✔ Updating your API definition to ReadMe... done!
",
  "stdout": "::warning::The slug of your API Definition will be set to __tests____fixtures__petstore-simple-weird-version.json in ReadMe. This slug is not visible to your end users. To set this slug to something else, use the \`--slug\` flag.
🚀 Your API definition (__tests____fixtures__petstore-simple-weird-version.json) was successfully updated in ReadMe!
",
}
`;

exports[`rdme openapi upload > given that the API definition is a local file > and the upload status initially is a pending state > should poll the API and handle timeouts 1`] = `
{
  "error": [Error: Sorry, this upload timed out. Please try again later.],
  "stderr": "- Validating the API definition located at __tests__/__fixtures__/petstore-simple-weird-version.json...
 ›   Warning: The slug of your API Definition will be set to 
 ›   __tests____fixtures__petstore-simple-weird-version.json in ReadMe. This 
 ›   slug is not visible to your end users. To set this slug to something else,
 ›    use the \`--slug\` flag.
- Creating your API definition to ReadMe...
",
  "stdout": "",
}
`;

exports[`rdme openapi upload > given that the API definition is a local file > and the upload status initially is a pending state > should poll the API once and handle a failure state with a 4xx 1`] = `
{
  "error": [Error: The ReadMe API responded with an unexpected error. Please try again and if this issue persists, get in touch with us at support@readme.io.],
  "stderr": "- Validating the API definition located at __tests__/__fixtures__/petstore-simple-weird-version.json...
 ›   Warning: The slug of your API Definition will be set to 
 ›   __tests____fixtures__petstore-simple-weird-version.json in ReadMe. This 
 ›   slug is not visible to your end users. To set this slug to something else,
 ›    use the \`--slug\` flag.
- Creating your API definition to ReadMe...
",
  "stdout": "",
}
`;

exports[`rdme openapi upload > given that the API definition is a local file > and the upload status initially is a pending state > should poll the API once and handle an unexpected state with a 2xx 1`] = `
{
  "error": [Error: Your API definition upload failed with an unexpected error. Please get in touch with us at support@readme.io.],
  "stderr": "- Validating the API definition located at __tests__/__fixtures__/petstore-simple-weird-version.json...
 ›   Warning: The slug of your API Definition will be set to 
 ›   __tests____fixtures__petstore-simple-weird-version.json in ReadMe. This 
 ›   slug is not visible to your end users. To set this slug to something else,
 ›    use the \`--slug\` flag.
- Creating your API definition to ReadMe...
✖ Creating your API definition to ReadMe... uploaded but not yet processed by ReadMe. Polling for completion...
",
  "stdout": "",
}
`;

exports[`rdme openapi upload > given that the API definition is a local file > and the upload status initially is a pending state > should poll the API until the update is complete 1`] = `
{
  "result": {
    "status": "done",
    "uri": "/branches/1.0.0/apis/__tests____fixtures__petstore-simple-weird-version.json",
  },
  "stderr": "- Validating the API definition located at __tests__/__fixtures__/petstore-simple-weird-version.json...
 ›   Warning: The slug of your API Definition will be set to 
 ›   __tests____fixtures__petstore-simple-weird-version.json in ReadMe. This 
 ›   slug is not visible to your end users. To set this slug to something else,
 ›    use the \`--slug\` flag.
- Updating your API definition to ReadMe...
✔ Updating your API definition to ReadMe... uploaded but not yet processed by ReadMe. Polling for completion... done!
",
  "stdout": "🚀 Your API definition (__tests____fixtures__petstore-simple-weird-version.json) was successfully updated in ReadMe!
",
}
`;

exports[`rdme openapi upload > given that the API definition is a local file > and the upload status initially is a pending state > should poll the API until the upload is complete 1`] = `
{
  "result": {
    "status": "done",
    "uri": "/branches/1.0.0/apis/__tests____fixtures__petstore-simple-weird-version.json",
  },
  "stderr": "- Validating the API definition located at __tests__/__fixtures__/petstore-simple-weird-version.json...
 ›   Warning: The slug of your API Definition will be set to 
 ›   __tests____fixtures__petstore-simple-weird-version.json in ReadMe. This 
 ›   slug is not visible to your end users. To set this slug to something else,
 ›    use the \`--slug\` flag.
- Creating your API definition to ReadMe...
✔ Creating your API definition to ReadMe... uploaded but not yet processed by ReadMe. Polling for completion... done!
",
  "stdout": "🚀 Your API definition (__tests____fixtures__petstore-simple-weird-version.json) was successfully created in ReadMe!
",
}
`;

exports[`rdme openapi upload > given that the API definition is a local file > given that the \`--branch\` flag is not set > should default to the \`stable\` version 1`] = `
{
  "result": {
    "status": "done",
    "uri": "/branches/stable/apis/__tests____fixtures__petstore-simple-weird-version.json",
  },
  "stderr": "- Validating the API definition located at __tests__/__fixtures__/petstore-simple-weird-version.json...
 ›   Warning: The slug of your API Definition will be set to 
 ›   __tests____fixtures__petstore-simple-weird-version.json in ReadMe. This 
 ›   slug is not visible to your end users. To set this slug to something else,
 ›    use the \`--slug\` flag.
- Creating your API definition to ReadMe...
✔ Creating your API definition to ReadMe... done!
",
  "stdout": "🚀 Your API definition (__tests____fixtures__petstore-simple-weird-version.json) was successfully created in ReadMe!
",
}
`;

exports[`rdme openapi upload > given that the API definition is a local file > given that the \`--branch\` flag is not set > should use the version from the spec file if --\`useSpecVersion\` is passed 1`] = `
{
  "result": {
    "status": "done",
    "uri": "/branches/1.2.3/apis/__tests____fixtures__petstore-simple-weird-version.json",
  },
  "stderr": "- Validating the API definition located at __tests__/__fixtures__/petstore-simple-weird-version.json...
 ›   Warning: The slug of your API Definition will be set to 
 ›   __tests____fixtures__petstore-simple-weird-version.json in ReadMe. This 
 ›   slug is not visible to your end users. To set this slug to something else,
 ›    use the \`--slug\` flag.
- Creating your API definition to ReadMe...
✔ Creating your API definition to ReadMe... done!
",
  "stdout": "🚀 Your API definition (__tests____fixtures__petstore-simple-weird-version.json) was successfully created in ReadMe!
",
}
`;

exports[`rdme openapi upload > given that the API definition is a local file > should create a new JSON API definition in ReadMe 1`] = `
{
  "result": {
    "status": "done",
    "uri": "/branches/1.0.0/apis/__tests____fixtures__petstore-simple-weird-version.json",
  },
  "stderr": "- Validating the API definition located at __tests__/__fixtures__/petstore-simple-weird-version.json...
 ›   Warning: The slug of your API Definition will be set to 
 ›   __tests____fixtures__petstore-simple-weird-version.json in ReadMe. This 
 ›   slug is not visible to your end users. To set this slug to something else,
 ›    use the \`--slug\` flag.
- Creating your API definition to ReadMe...
✔ Creating your API definition to ReadMe... done!
",
  "stdout": "🚀 Your API definition (__tests____fixtures__petstore-simple-weird-version.json) was successfully created in ReadMe!
",
}
`;

exports[`rdme openapi upload > given that the API definition is a local file > should create a new JSON API definition in ReadMe with deprecated \`--version\` flag 1`] = `
{
  "result": {
    "status": "done",
    "uri": "/branches/1.0.0/apis/__tests____fixtures__petstore-simple-weird-version.json",
  },
  "stderr": " ›   Warning: The "--version" flag has been deprecated. Use "--branch" instead.
- Validating the API definition located at __tests__/__fixtures__/petstore-simple-weird-version.json...
 ›   Warning: The slug of your API Definition will be set to 
 ›   __tests____fixtures__petstore-simple-weird-version.json in ReadMe. This 
 ›   slug is not visible to your end users. To set this slug to something else,
 ›    use the \`--slug\` flag.
- Creating your API definition to ReadMe...
✔ Creating your API definition to ReadMe... done!
",
  "stdout": "🚀 Your API definition (__tests____fixtures__petstore-simple-weird-version.json) was successfully created in ReadMe!
",
}
`;

exports[`rdme openapi upload > given that the API definition is a local file > should create a new YAML API definition in ReadMe 1`] = `
{
  "result": {
    "status": "done",
    "uri": "/branches/1.0.0/apis/__tests____fixtures__postmanpetstore.collection.yaml",
  },
  "stderr": "- Validating the API definition located at __tests__/__fixtures__/postman/petstore.collection.yaml...
 ›   Warning: Support for Postman collections is currently experimental.
 ›   Warning: The slug of your API Definition will be set to 
 ›   __tests____fixtures__postmanpetstore.collection.yaml in ReadMe. This slug 
 ›   is not visible to your end users. To set this slug to something else, use 
 ›   the \`--slug\` flag.
- Creating your API definition to ReadMe...
✔ Creating your API definition to ReadMe... done!
",
  "stdout": "🚀 Your API definition (__tests____fixtures__postmanpetstore.collection.yaml) was successfully created in ReadMe!
",
}
`;

exports[`rdme openapi upload > given that the API definition is a local file > should handle upload failures 1`] = `
{
  "error": [Error: Your API definition upload failed with an unexpected error. Please get in touch with us at support@readme.io.],
  "stderr": "- Validating the API definition located at __tests__/__fixtures__/petstore-simple-weird-version.json...
 ›   Warning: The slug of your API Definition will be set to 
 ›   __tests____fixtures__petstore-simple-weird-version.json in ReadMe. This 
 ›   slug is not visible to your end users. To set this slug to something else,
 ›    use the \`--slug\` flag.
- Creating your API definition to ReadMe...
✖ Creating your API definition to ReadMe...
",
  "stdout": "",
}
`;

exports[`rdme openapi upload > given that the API definition is a local file > should update an existing API definition in ReadMe 1`] = `
{
  "result": {
    "status": "done",
    "uri": "/branches/1.0.0/apis/__tests____fixtures__petstore-simple-weird-version.json",
  },
  "stderr": "- Validating the API definition located at __tests__/__fixtures__/petstore-simple-weird-version.json...
 ›   Warning: The slug of your API Definition will be set to 
 ›   __tests____fixtures__petstore-simple-weird-version.json in ReadMe. This 
 ›   slug is not visible to your end users. To set this slug to something else,
 ›    use the \`--slug\` flag.
- Updating your API definition to ReadMe...
✔ Updating your API definition to ReadMe... done!
",
  "stdout": "🚀 Your API definition (__tests____fixtures__petstore-simple-weird-version.json) was successfully updated in ReadMe!
",
}
`;
